@@ -16,6 +16,7 @@
 
     <ul>
         <li>[Feature] IPv6 Interoperability with support for EPSV and EPRT commands (FTP) [<a href="http://trac.cyberduck.ch/ticket/2539">#2539</a>, <a href="http://trac.cyberduck.ch/ticket/2539">#2885</a>]</li>
+        <li>[Feature] UTF8 charset negogiation (FTP)</li>
         <li>[Feature] Support for hierarchical directory structure (Mosso)</li>
         <li>[Bugfix] Update passwords in Keychain [<a href="http://trac.cyberduck.ch/ticket/2984">#2984</a>]</li>
         <li>[Bugfix] Only reauthenticate when needed (Mosso) [<a href="http://trac.cyberduck.ch/ticket/2876">#2876</a>]</li>
