@@ -6,6 +6,7 @@ Changelog. Last modified: $Date$
 
 3.1.3 [http://trac.cyberduck.ch/query?status=closed&milestone=3.1.3]
 - [Feature] IPv6 Interoperability with support for EPSV and EPRT commands (FTP) [#2539, #2885]
+- [Feature] UTF8 charset negogiation (FTP) 
 - [Feature] Support for hierarchical directory structure (Mosso)
 - [Bugfix] Update passwords in Keychain [#2984]
 - [Bugfix] Invalid Origin parameter when creating CloudFront distribution (S3) [#3068]
